# SCE

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  SCE.pro  envtest.sh  feature_plans.md  gdb.sh  generate_grpc_libs.sh  list_libs.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  next_steps.md  print_libs.sh  run_all_test_configurations.sh  runner.sh  settings.cpp  settings.h  tool_editor_widget.cpp  tool_editor_widget.h
docs/: description.md  next_steps.md
interop/: language_server_protocol.cpp  language_server_protocol.h  notification_server.cpp  notification_server.h  plugin.cpp  plugin.h  rpc_server.cpp  rpc_server.h  sce.proto
logic/: lsp_feature.cpp  lsp_feature.h  process_reader.cpp  process_reader.h  project.cpp  project.h  settings.cpp  settings.h  syntax_highligher.cpp  syntax_highligher.h  tool.cpp  tool.h  tool_actions.cpp  tool_actions.h
plugins/c++/: clang-syntax-checker.py
testdata/: c++-syntax.json  test_deserialize.py
testdata/interop_scripts/: rpc_call.py  run_python_script.sh  run_rpc_call.sh  setup_python.sh
tests/: test.cpp  test.h  test_language_server_protocol.cpp  test_mainwindow.cpp  test_mainwindow.h  test_notification_server.cpp  test_notification_server.h  test_plugin.cpp  test_plugin.h  test_process_reader.cpp  test_process_reader.h  test_rpc_server.cpp  test_rpc_server.h  test_settings.cpp  test_settings.h  test_thread_pointer.cpp  test_tool.cpp  test_tool.h  test_tool_editor_widget.cpp  test_tool_editor_widget.h
threading/: gui_pointer.cpp  gui_pointer.h  thread_call.h  thread_check.cpp  thread_check.h  thread_pointer.cpp  thread_pointer.h  thread_safe.h
ui/: checkbox_widget.cpp  checkbox_widget.h  edit_window.cpp  edit_window.h  helptext_label_widget.cpp  helptext_label_widget.h  keyboard_shortcuts_widget.cpp  keyboard_shortcuts_widget.h  keyboard_shortcuts_widget.ui  lsp_feature_setup_widget.cpp  lsp_feature_setup_widget.h  lsp_feature_setup_widget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tool_editor_widget.cpp  tool_editor_widget.h  tool_editor_widget.ui
utility/: color.h  error.cpp  error.h  pipe.cpp  pipe.h  protobuffer_encoder.cpp  protobuffer_encoder.h  raii.cpp  raii.h  thread_call.cpp  thread_call.h  thread_check.h  thread_safe.h  unique_handle.cpp  unique_handle.h  utility.cpp  utility.h
